--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,45 @@
 .App {
-  text-align: center;
+  /* text-align: center; */
+  margin-left: 40px;
+  margin-top: 24px;
+  display: flex;
+  flex-direction: column;
+}
+
+input {
+  height: 26px;
+  width: 220px;
+  border-radius: 4px;
+  border-color: #BDBDBD;
+  font-size: 16sp;
+}
+
+.checkbox {
+  max-width: 60px;
+}
+.total {
+  font-size: 32px;
+  color: #282c34;
+}
+button {
+  width: 36px;
+  height: 28px;
+  background-color: black;
+  font-size: 20px;
+  color: #fff;
+  margin-right: 24px;
 }
 
 .App-logo {
   height: 40vmin;
   pointer-events: none;
+}
+
+.container-input {
+  width: max-content;
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 24px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
